--- a/Proyecto 2.html
+++ b/Proyecto 2.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8"><!--JHOSTYN PILATASIG-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <LINK REL=StyleSheet HREF="css/Style.css" TYPE="text/css" MEDIA=screen>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <script src="js/jquery.js"></script>
 <script src="js/formulario.js" language="javascript" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-<script>
-            $(document).on("click",".btn_ejecutar",()=>{
-            $("#titulo").attr("class","bg-danger");
-        })
+<link rel="stylesheet" href="sweetalert2.min.css">
+<script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
+
 </script> <!--JHOSTYN PILATASIG-->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>           
 </head>                      <!--Jhostyn Pilatasig-->
@@ -83,12 +83,20 @@
                     <span class="input-group-text" id="inputGroup-sizing-default">Contraseña:</span>
                     </div>
                     <input type="password" id="password" class="form-control">
-                    </div>  
+                    </div>
+                     <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-default">Confirmar Contraseña:</span>
+                    </div>
+                    <input type="password" id="confirm_password" class="form-control">
+                    </div>
+
                     <div class="input-group mb-3"><!--JHOSTYN PILATASIG-->
                       <div class="input-group-prepend">
     <label class="input-group-text" for="inputGroupSelect01"><small>Ciudad:</small></label>
   </div>
-  <select class="custom-select" id="inputGroupSelect01">
+  <select class="custom-select" id="ciudad">
+                 <option value="">Seleccione Una Ciudad</option>}
                  <option value="AMBATO">AMBATO</option>
                     <option value="CUENCA">CUENCA</option>
                     <option value="GUAYAQUIL">GUAYAQUIL</option>
